--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,47 +1,48 @@
 name: Generate Snake
 
-# Controls when the action will run
 on:
   schedule:
-    # Runs at 00:00 UTC every day
-    - cron: "0 0 * * *"
+    # Runs every 30 minutes
+    - cron: "*/30 * * * *"
   
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows manual trigger from the Actions tab
   workflow_dispatch:
   
-  # Run on every push to main branch
+  # Runs on every push, merge, or commit to main branch
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
     permissions:
       contents: write
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
+      # Step 1: Checkout repository
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      # Step 2: Generate the snake
-      - name: Generate Snake
+      # Step 2: Generate latest snake contribution animation
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
-        id: snake-gif
         with:
-          github_user_name: saim-61s
+          # Automatically use your GitHub username
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      # Step 3: Push the generated files to output branch
-      - name: Push to Output Branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 3: Push the generated output to 'output' branch
+      - name: Push to Output Branch
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: ./dist
+          commit_message: "Update Snake Game Animation [skip ci]"
